<resources>
   <string name="app_name">BMI Calculator</string>
   <string name="enter_height">Enter Height</string>
   <string name="enter_weight">Enter Weight</string>
   <string name="bmi">BMI</string>

   <string name="calories_title">Calculating Daily Calories</string>
   <string name="age_hint">Age</string>
   <string name="weight_hint">Weight (kg)</string>
   <string name="height_hint">Height (cm)</string>
   <string name="male">Male</string>
   <string name="female">Female</string>
   <string name="calculate">Calculate</string>
   <string name="calories_result">Your daily calorie count is: %.2f</string>
   <string name="title_activity_quiz">Quiz</string>
   <string name="bmi_chart">BMI Chart</string>
   <string name="chart_with_data">Chart with Data</string>
   <string name="save_result">Save Result</string>

   <string name="spaghetti_meatballs_recipe">Ingredients:\n\n1 pound ground beef\n1/2 cup breadcrumbs\n1/4 cup milk\n1/4 cup grated Parmesan cheese\n1/4 cup chopped fresh parsley\n1 egg\n1 teaspoon salt\n1/2 teaspoon black pepper\n1/4 teaspoon garlic powder\n1/4 teaspoon onion powder\n1 pound spaghetti\n4 cups tomato sauce\nGrated Parmesan cheese, for serving\n\nInstructions:\n\nPreheat the oven to 200°C.\nIn a large bowl, mix together the ground beef, breadcrumbs, milk, Parmesan cheese, parsley, egg, salt, black pepper, garlic powder, and onion powder until well combined.\nRoll the mixture into 1-inch balls and place on a baking sheet lined with parchment paper.\nBake the meatballs for 20-25 minutes, or until cooked through.\nWhile the meatballs are cooking, cook the spaghetti according to the package directions.\nHeat the tomato sauce in a large saucepan over medium heat.\nAdd the meatballs to the tomato sauce and simmer for 10-15 minutes.\nServe the spaghetti topped with the meatballs and tomato sauce, and sprinkle with Parmesan cheese.</string>
   <string name="chicken_alfredo_recipe">Ingredients:\n\n1 pound fettuccine pasta\n1/2 cup unsalted butter\n2 cloves garlic, minced\n2 cups heavy cream\n1/4 teaspoon white pepper\n1 1/2 cups freshly grated Parmesan cheese\n2 cups cooked, diced chicken breast\n\nInstructions:\n\nCook fettuccine pasta according to package directions.\nWhile the pasta is cooking, melt butter in a large skillet over medium heat.\nAdd minced garlic and sauté for 1-2 minutes, or until fragrant.\nAdd heavy cream and white pepper to the skillet and bring to a simmer.\nReduce heat to low and whisk in Parmesan cheese until melted and sauce is smooth.\nAdd cooked chicken breast to the skillet and heat through.\nDrain pasta and add to the skillet with the chicken alfredo sauce.\nToss pasta with sauce until evenly coated and serve hot.</string>
</resources>
